<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <!-- ヘッダー -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/list_title"
            android:textSize="25dp"
            android:layout_weight="1" />
        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ToTopPage"
            android:onClick="returnTopPage" />
    </LinearLayout>
        
    <!-- 品物リスト -->
    <TextView
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Itemlist"/>
    
    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
	    <HorizontalScrollView
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1">
	    	<ScrollView
	        	android:layout_width="wrap_content"
	        	android:layout_height="match_parent">
	        	<LinearLayout
	        	    android:id="@+id/itemInfo"
	        	    android:layout_width="match_parent"
	        	    android:layout_height="wrap_content"
	        	    android:orientation="vertical">        	    
	        	</LinearLayout>
	   		</ScrollView>
	    </HorizontalScrollView>
	    
	    <!-- 各種ボタン -->
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="bottom"
		    android:orientation="horizontal">
		    <Button 
		        android:id="@+id/ItemAdd"
		        android:layout_weight="1"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:onClick="itemAddMain"
		    	android:text="@string/ItemAdd" />
		    <Button 
		        android:id="@+id/ItemUpdate"
		        android:layout_weight="1"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"	    
		    	android:onClick="itemUpDelMain"
		    	android:text="@string/ItemUpdate" />
		    <Button 
		        android:id="@+id/ItemDelete"
		        android:layout_weight="1"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:onClick="itemUpDelMain"	    
		    	android:text="@string/ItemDelete" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>