<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <Button 
        android:id="@+id/order"
        android:text="@string/order_label"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"/>
    
    <Button 
        android:id="@+id/editList"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/editList_label"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp" />
    
    <Button 
        android:id="@+id/orderHistory"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/orderHistory_label"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" />
    
</LinearLayout>