<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <!-- ヘッダー -->
    <TextView
        android:text="@string/checkTxt"
        android:textSize="20dp" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"/>

    <!-- 品物情報 -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
	    <HorizontalScrollView
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1">
	    	<ScrollView
	        	android:layout_width="wrap_content"
	        	android:layout_height="match_parent">
	        	<LinearLayout
	        	    android:id="@+id/orderedItem"
	        	    android:layout_width="match_parent"
	        	    android:layout_height="wrap_content"
	        	    android:orientation="vertical">        	    
	        	</LinearLayout>
	   		</ScrollView>
	    </HorizontalScrollView>
	    
	    <!-- 各種ボタン -->
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="bottom"
		    android:orientation="horizontal">
		    <Button 
		        android:layout_weight="1"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:onClick="finishActivity"
		    	android:text="@string/no" />
		    <Button 
		        android:layout_weight="1"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:onClick="callAddressMain"  
		    	android:text="@string/yes" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>